[tool.poetry]
name = "cqbot"
version = "0.3.0"
description = "just a chatting bot"
authors = ["Lycreal"]
license = "MIT"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/Lycreal/cqbot"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0a13.post1"
nonebot-adapter-cqhttp = "^2.0.0a13"
nonebot_plugin_manager = "^0.4.0"
nonebot-plugin-apscheduler = "^0.1.2"
nonebot-plugin-help = "^0.1.4"
pydantic = "^1.8.1"
lxml = "^4.9.0"
httpx = "^0.17.1"
opencv-python-headless = "^4.6.0"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
starlette = "^0.13.6"
requests = "^2.27.1"
mypy = "^0.960"
nonebot-plugin-test = "^0.2.0"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/reference.html#configuration-options
minversion = "6.0"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
