[project]
name = "cqbot"
version = "0.4.1"
description = "just a chatting bot"
authors = ["Lycreal"]
license = "MIT"

readme = 'README.md'  # Markdown files are supported
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-help>=0.6.1",
    "nonebot-plugin-manager>=0.5.16",
    "nonebot2[fastapi]>=2.4.1",
    "numpy>=2.2.2",
    "opencv-python-headless>=4.11.0.86",
    "pydantic~=1.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
]
